--- a/ios/Podfile
+++ b/ios/Podfile
@@ -81,6 +81,8 @@ target 'deneme' do
 
   pod 'react-native-sqlite-storage', :path => '../node_modules/react-native-sqlite-storage'
 
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
   target 'denemeTests' do
     inherit! :complete
     # Pods for testing
