--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "react-native-pagination": "^1.5.5",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "^1.9.0",
+    "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^1.0.2",
     "react-native-screens": "^2.8.0",
     "react-native-sqlite-storage": "^5.0.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^9.4.0",
     "react-navigation": "^2.18.3",
     "react-navigation-material-bottom-tabs": "^0.1.2",
     "react-navigation-stack": "^2.5.1",
