--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "deneme",
+  "name": "English",
   "version": "0.0.1",
   "private": true,
   "rnpm": {
@@ -33,6 +33,7 @@
     "react-native-pagination": "^1.5.5",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "^1.9.0",
+    "react-native-rename": "^2.4.1",
     "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^1.0.2",
     "react-native-screens": "^2.8.0",
